--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "exams/learning-cxx"]
-	path = exams/learning-cxx
+[submodule "learning-cxx"]
+	path = learning-cxx
 	url = https://github.com/goldenfox2025/learning-cxx.git
